<resources>

    <string name="app_name">信源OA</string>
    <string name="app_logo">郑州信源移动OA</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">欢迎使用信源移动OA</string>
    <string name="login_username">账号：</string>
    <string name="login_username_hint">输入OA用户名</string>
    <string name="login_userpass">密码：</string>
    <string name="login_username_error">账号不能为空！</string>
    <string name="login_userpass_error">密码不能为空！</string>
    <string name="login_remmber_pass">记住密码</string>
    <string name="login_outline">离线登陆</string>
    <string name="login_button">登陆</string>
    <string name="login_exit">退出</string>
    <string name="login_login">重新登录</string>
    <string name="menu_allorder">快速请假</string>
    <string name="menu_sendorder">手动发送</string>
    <string name="kaoqin">考勤查询</string>
    <string name="tongxunlu">通讯录查询</string>
    <string name="quick_operate">快速操作</string>
    <string name="alert_dialog_department">部门</string>
    <string name="alert_dialog_name">姓名</string>
    <string-array name="quick_operate_items">
        <item>拨打手机</item>
        <item>发送短信</item>
        <item>复制号码</item>
    </string-array>
    <string name="contacts_department">按部门查询</string>
    <string name="contact_search_hint_text">共有 %d 个联系人</string>
    <string name="online_search">在线查询</string>
    <string name="menu_help">系统帮助</string>
    <string name="menu_setting">系统设置</string>
    <string-array name="system_setting_items">
        <item>考勤接收号码设置</item>
        <item>更新本地通讯录</item>
    </string-array>
    <string name="kaoqin_benzhou">本周考勤</string>
    <string name="kaoqin_shangzhou">上周考勤</string>
    <string name="kaoqin_week">星期</string>
    <string name="kaoqin_kaoqinnr">考勤</string>
    <string name="orderhelp">
        1、第一次使用本系统，请您务必连接网络登陆。联网登陆成功后，
             以后可以再登陆界面选择离线登陆。\n
        2、进入系统之后，系统会进行初始化操作，此过程请不要退出程序。\n
        3、请假功能是将请假内容转换为请假指令后调用系统短信功能发出，
             此功能可能在不同的固件下有所区别，目前还没有遇到，如您遇到了问题请联系作者。\n  
        4、考勤查询功能只能查询您本周和上周的考勤信息。\n
        5、通讯录查询中，您只能输入姓名拼音或首字母查询，如果您想查看部门通讯录，
             请您点击标题栏上的文字（默认是所有部门），系统会弹出部门选择框供您选择查询。
             长按每一个联系人将弹出发短信，打电话等功能菜单。\n
        6、在线查询功能中，每天9:10分之后查询，可以查询到同事的电话以及当天的考勤信息。
             点击标题栏中的数据检索，系统将弹出检索对话框供您检索数据。\n    
        7、系统设置功能中的号码设置是指OA短信请假指令接收号码的设置，
             更新数据功能是指您可以在线更新系统本地的通讯录。
             通常此功能是在公司同事联系方式有变更的时候会用到。建议您每一个月更新一次。\n
         8、其他未尽事宜，请等待下一个版本的更新。如需帮助，请联系作者。\n
         9、作者联系方式：QQ：623750269 (移动运营部)
    </string>
    <string name="qitype">请假类型:</string>
    <string-array name="qjtypeItem">
        <item>请假</item> 
        <item>出差</item>  
        <item>市内办事</item>      
        <item>因私外出</item>
        <item>调休</item>
    </string-array>
    <string-array name="ksqjItems">
        <item>今天上午请假半天</item> 
        <item>今天下午请假半天</item>  
        <item>今天请假一天</item>
        <item>明天上午请假半天</item>
        <item>明天下午请假半天</item>
        <item>明天请假一天</item>      
    </string-array>
    <string-array name="kstxItems">
        <item>今天上午调休半天</item> 
        <item>今天下午调休半天</item>  
        <item>今天调休一天</item>
        <item>明天上午调休半天</item>
        <item>明天下午调休半天</item>
        <item>明天调休一天</item>      
    </string-array>
    <string-array name="ksccItems">
        <item>今天上午出差半天</item> 
        <item>今天下午出差半天</item>  
        <item>今天出差一天</item>
        <item>明天上午出差半天</item>
        <item>明天下午出差半天</item>
        <item>明天出差一天</item>      
    </string-array>
    <string-array name="kswcItems">
        <item>今天上午因私外出</item> 
        <item>今天下午因私外出</item>  
        <item>今天因私外出一天</item>
    </string-array>
    <string-array name="ksbsItems">
        <item>今天上午市内办事</item> 
        <item>今天下午市内办事</item>  
        <item>今天市内办事</item>
        <item>明天上午市内办事</item> 
        <item>明天下午市内办事</item>  
        <item>明天市内办事一天</item>
    </string-array>
    <string name="starttime">开始时间:</string>
       <string-array name="startTimeItem">
        <item>今天</item> 
        <item>明天</item>  
        <item>后天</item>
       </string-array>
    <string name="sjtime">请假时间:</string>
       <string-array name="sjtimeradio">
        <item>上午</item> 
        <item>下午</item>  
       </string-array>
    <string  name="sendButton">发送</string>
    <string  name="cancelButton">取消</string>
    <string name="des">
        说明：\n
                  1、请假类型默认为请假，开始时间默认为今天，点击可以选择。\n
                  2、请假时间举例说明：半天填写0.5，一天写1，一天半写1.5，以此类推。
    </string>
    <string name="old_password">
        请输入原密码
    </string>
    <string name="new_password">
        请输入新密码
    </string>
    <string name="new_password2">
        请再次输入新密码
    </string>
    <string name="update_pass_confirm">修改</string>
     <string name="update_pass_cancel">取消</string>
</resources>