<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/background_login">
  <!-- padding 内边距   layout_margin 外边距
  		android:layout_alignParentTop 布局的位置是否处于顶部 -->
  <RelativeLayout 
  	android:id="@+id/login_div"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:padding="15dip"        
  	android:layout_margin="15dip" 
  	android:background="@drawable/background_login_div_bg"
  	>
  	<!-- 账号 -->
  	<TextView 
  		android:id="@+id/login_user_input"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:layout_alignParentTop="true"
  		android:layout_marginTop="5dp"
  		android:text="@string/login_username"
  		style="@style/normalText"/>
  	<EditText 
  		android:id="@+id/username_edit"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:hint="@string/login_username_hint"
  		android:layout_below="@id/login_user_input"
  		android:singleLine="true"
  		android:inputType="text"/>
    <!-- 密码 text -->
    <TextView 
    	android:id="@+id/login_password_input"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/username_edit"
    	android:layout_marginTop="3dp"
    	android:text="@string/login_userpass"
    	style="@style/normalText"/>
    <EditText 
    	android:id="@+id/password_edit"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/login_password_input"
    	android:singleLine="true"
    	android:inputType="textPassword"
    />
    <CheckBox android:id="@+id/password_rem_checkbox" 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/password_edit"
    	android:layout_alignBaseline="@+id/password_rem_text"
        android:layout_marginTop="3dp"
         />
    <TextView android:id="@+id/password_rem_text"
         android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/login_remmber_pass"
    	android:layout_below="@id/password_edit"
    	android:layout_toRightOf="@id/password_rem_checkbox"
    	android:textColor="#ff222222"
        android:textSize="16dp"
        />
    <CheckBox android:id="@+id/login_check_outline" 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/password_edit"
    	android:layout_toRightOf="@id/password_rem_text"
    	android:layout_alignBaseline="@+id/login_check_outline_text"
        android:layout_marginTop="3dp"
        android:visibility="invisible"
         />
    <TextView android:id="@+id/login_check_outline_text"
         android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/login_outline"
    	android:layout_below="@id/password_edit"
    	android:layout_toRightOf="@id/login_check_outline"
    	android:textColor="#ff222222"
        android:textSize="16dp"
        android:visibility="invisible"
        />
    <!-- 登录button -->
    <Button 
    	android:id="@+id/login_button"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignRight="@id/password_edit"
    	android:text="@string/login_button"
    	android:gravity="center"
    	android:layout_below="@id/password_rem_checkbox"
    	android:background="@drawable/blue_button"
    />
  </RelativeLayout>
  
  <RelativeLayout 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      >
	    <TextView
	        android:layout_alignParentRight="true"
	        android:layout_alignParentBottom="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/app_logo"
	        android:gravity="center"
	        android:textColor="#0080FF"
	        android:textSize="23dp"
	        />
	    </RelativeLayout>
 
</LinearLayout>
