<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical" 
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   >
    <include layout="@layout/activity_menus_title"/>
    
   <TableLayout 
      android:id="@+id/TableLayoutReg" 
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:collapseColumns="3"
      android:stretchColumns="1"
      >
       <TableRow 
         android:id="@+id/TableRowType" 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         >
          <TextView 
              android:text="@string/qitype"
              android:id="@+id/TextViewQJType"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="#000000"
              android:textStyle="bold"
              ></TextView>
          <Spinner
              android:id="@+id/qjspinner"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              >
             </Spinner>
           </TableRow>
       <TableRow 
         android:id="@+id/TableRowTime" 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         >
          <TextView 
              android:text="@string/starttime"
              android:id="@+id/TextViewStarttime"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textColor="#000000"
              android:textStyle="bold"
              ></TextView>
          <Spinner
              android:id="@+id/startspinner"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              >
             </Spinner>
           </TableRow>
       <TableRow 
         android:id="@+id/TableRowUserMarriged" 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColor="#000000"
         android:textStyle="bold"
         >
          <TextView 
              android:text="@string/sjtime"
              android:id="@+id/TextViewQjTime"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textColor="#000000"
              android:textStyle="bold"
              ></TextView>
          <EditText 
              android:id="@+id/EditTextQjTime"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:inputType="numberDecimal"
              />
      </TableRow>
           <TableRow android:gravity="right">
            <Button android:text="@string/cancelButton" 
                 android:id="@+id/cancelButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 >    
             </Button>  
             <Button android:text="@string/sendButton" 
               android:id="@+id/sendButton"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               >    
             </Button>       
        </TableRow>
   </TableLayout> 
   <TextView 
              android:text="@string/des"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textColor="#1B4F93"
              android:textSize="18dp"
              android:textStyle="bold"
     ></TextView>
 </LinearLayout>
